feat: added first version for gitrepository creation
