# docs/swagger.json
@@ -21,6 +21,72 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
+        "/api/{organization}/{projectId}/git/repositories": {
+            "post": {
+                "description": "Create a new GitRepository on Azure DevOps using the provided organization, project, and repository details.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Create a new GitRepository on Azure DevOps",
+                "operationId": "post-gitrepository",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Organization name",
+                        "name": "organization",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Project ID or name",
+                        "name": "projectId",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Specify the source refs to use while creating a fork repo",
+                        "name": "sourceRef",
+                        "in": "path"
+                    },
+                    {
+                        "type": "string",
+                        "description": "API version (e.g., 7.2-preview.2)",
+                        "name": "api-version",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Basic Auth header (Basic \u003cbase64-encoded-username:password\u003e)",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "GitRepository creation request body (with additional fields handled by the plugin)",
+                        "name": "gitrepositoryCreate",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/gitrepository.CreateRepositoryRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "GitRepository details",
+                        "schema": {
+                            "$ref": "#/definitions/gitrepository.CreateRepositoryResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/api/{organization}/{project}/pipelines/pipelinepermissions/{resourceType}/{resourceId}": {
             "get": {
                 "description": "Get",
@@ -85,6 +151,169 @@
         }
     },
     "definitions": {
+        "gitrepository.CreateRepositoryRequest": {
+            "type": "object",
+            "properties": {
+                "defaultBranch": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "parentRepository": {
+                    "$ref": "#/definitions/gitrepository.GitRepositoryRefMinimal"
+                },
+                "project": {
+                    "$ref": "#/definitions/gitrepository.TeamProjectReferenceMinimal"
+                }
+            }
+        },
+        "gitrepository.CreateRepositoryResponse": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                },
+                "parentRepository": {
+                    "$ref": "#/definitions/gitrepository.GitRepositoryRef"
+                },
+                "project": {
+                    "$ref": "#/definitions/gitrepository.TeamProjectReference"
+                }
+            }
+        },
+        "gitrepository.GitRepositoryRef": {
+            "type": "object",
+            "properties": {
+                "collection": {
+                    "$ref": "#/definitions/gitrepository.TeamProjectCollectionReference"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "isFork": {
+                    "type": "boolean"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "project": {
+                    "$ref": "#/definitions/gitrepository.TeamProjectReference"
+                },
+                "remoteUrl": {
+                    "type": "string"
+                },
+                "sshUrl": {
+                    "type": "string"
+                },
+                "url": {
+                    "type": "string"
+                }
+            }
+        },
+        "gitrepository.GitRepositoryRefMinimal": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "project": {
+                    "$ref": "#/definitions/gitrepository.TeamProjectReferenceMinimal"
+                }
+            }
+        },
+        "gitrepository.ProjectState": {
+            "type": "string",
+            "enum": [
+                "deleting",
+                "new",
+                "wellFormed",
+                "createPending",
+                "all",
+                "unchanged",
+                "deleted"
+            ],
+            "x-enum-varnames": [
+                "ProjectStateDeleting",
+                "ProjectStateNew",
+                "ProjectStateWellFormed",
+                "ProjectStateCreatePending",
+                "ProjectStateAll",
+                "ProjectStateUnchanged",
+                "ProjectStateDeleted"
+            ]
+        },
+        "gitrepository.ProjectVisibility": {
+            "type": "string",
+            "enum": [
+                "private",
+                "public"
+            ],
+            "x-enum-varnames": [
+                "ProjectVisibilityPrivate",
+                "ProjectVisibilityPublic"
+            ]
+        },
+        "gitrepository.TeamProjectCollectionReference": {
+            "type": "object",
+            "properties": {
+                "avatarUrl": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "url": {
+                    "type": "string"
+                }
+            }
+        },
+        "gitrepository.TeamProjectReference": {
+            "type": "object",
+            "properties": {
+                "abbreviation": {
+                    "type": "string"
+                },
+                "defaultTeamImageUrl": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "lastUpdateTime": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "revision": {
+                    "type": "integer"
+                },
+                "state": {
+                    "$ref": "#/definitions/gitrepository.ProjectState"
+                },
+                "url": {
+                    "type": "string"
+                },
+                "visibility": {
+                    "$ref": "#/definitions/gitrepository.ProjectVisibility"
+                }
+            }
+        },
+        "gitrepository.TeamProjectReferenceMinimal": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string"
+                }
+            }
+        },
         "pipelinepermission.IdentityRef": {
             "type": "object",
             "properties": {
